<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_first_name"/>

    <EditText
        android:id="@+id/edit_text_first_name_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_last_name"/>

    <EditText
        android:id="@+id/edit_text_last_name_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_date_of_birth"/>

    <EditText
        android:id="@+id/edit_text_date_of_birth_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_email"/>

    <EditText
        android:id="@+id/edit_text_email_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_update_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_button_update"/>

    <Button
        android:id="@+id/button_delete_ud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_delete_screen_button_delete"/>

</LinearLayout>