<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recycler_view_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/gray_80"
    android:layout_marginBottom="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_first_name"/>

    <TextView
        android:id="@+id/recycler_view_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_last_name"/>

    <TextView
        android:id="@+id/recycler_view_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_date_of_birth"/>

    <TextView
        android:id="@+id/recycler_view_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_screen_email"/>

    <TextView
        android:id="@+id/recycler_view_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>